--- a/cloudsim-master/documentation/src/main/resources/pom.xml
+++ b/cloudsim-master/documentation/src/main/resources/pom.xml
@@ -44,7 +44,7 @@ Acknowledgement:
 	<url>http://www.cloudbus.org/cloudsim/</url>
 
 	<properties>
-		<jdk.version>1.6</jdk.version>
+		<jdk.version>1.8</jdk.version>
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<felix-version>2.0.1</felix-version>
 	</properties>
@@ -54,7 +54,7 @@ Acknowledgement:
 		<outputDirectory>classes</outputDirectory>
 		<finalName>cloudsim-new</finalName>
 		<testOutputDirectory>classes/test-classes</testOutputDirectory>
-		<sourceDirectory>sources</sourceDirectory>
+		<!--<sourceDirectory>sources</sourceDirectory>-->
 
 		<resources>
 			<resource>
@@ -66,12 +66,12 @@ Acknowledgement:
 			<plugins>
 				<plugin>
 					<artifactId>maven-compiler-plugin</artifactId>
-					<version>2.3.2</version>
+					<version>3.6.1</version>
 				</plugin>
 				<plugin>
 					<groupId>org.apache.maven.plugins</groupId>
 					<artifactId>maven-jar-plugin</artifactId>
-					<version>2.3.1</version>
+					<version>3.0.2</version>
 				</plugin>
 			</plugins>
 		</pluginManagement>
@@ -80,7 +80,7 @@ Acknowledgement:
 			<plugin>
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-javadoc-plugin</artifactId>
-				<version>2.5</version>
+				<version>2.10.4</version>
 				<configuration>
 					<maxmemory>1024</maxmemory>
 				</configuration>
@@ -89,8 +89,8 @@ Acknowledgement:
 				<groupId>org.apache.maven.plugins</groupId>
 				<artifactId>maven-compiler-plugin</artifactId>
 				<configuration>
-					<source>1.6</source>
-					<target>1.6</target>
+					<source>1.8</source>
+					<target>1.8</target>
 					<debug>true</debug>
 				</configuration>
 			</plugin>
